--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "lucide-react": "^0.554.0",
-    "react-router-dom": "^7.9.6"
+    "lucide-react": "^0.554.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
